fix animation on mobile view

--- a/src/components/LandingPage/LandingPage.module.css
+++ b/src/components/LandingPage/LandingPage.module.css
@@ -809,6 +809,12 @@
   z-index: 5;
 }
 
+@media (max-width: 900px) {
+  .anchorVisual {
+    height: 140px;
+  }
+}
+
 .connectorLine {
   position: absolute;
   top: 50%;
@@ -843,7 +849,7 @@
 @media (max-width: 900px) {
   .mergeSvg {
     width: 100%;
-    height: 80px;
+    height: 120px;
   }
 }
 
